Api-361-[refactor] 대시보드 코드 리팩토링 (#98)
* refactor : 서비스 로직 분리

* fix : 상품 조회 시 category 오류 수정

* refactor : 오류 수정 및 코드 리팩토링

* fix : 대시보드 오류 수정